--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,10 @@
     "autoload": {
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files": [
+            "app/helpers.php"
+        ]
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
