add deploy helper script

--- a/composer.json
+++ b/composer.json
@@ -41,6 +41,7 @@
         ],
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
-        ]
+        ],
+        "deploy": "php artisan export --env=prod"
     }
 }
