--- a/.env.example
+++ b/.env.example
@@ -9,8 +9,8 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
+DB_DATABASE=stancy
+DB_USERNAME=stancy
 DB_PASSWORD=
 
 BROADCAST_DRIVER=log
