--- a/composer.json
+++ b/composer.json
@@ -6,10 +6,14 @@
     "license": "MIT",
     "require": {
         "php": "^7.2",
+        "ext-json": "*",
         "astrotomic/stancy": "^0.5.0",
         "fideloper/proxy": "^4.0",
+        "knplabs/github-api": "^2.11",
         "laravel/framework": "^6.0",
-        "spatie/laravel-blade-x": "^2.4"
+        "php-http/guzzle6-adapter": "^1.1",
+        "spatie/laravel-blade-x": "^2.4",
+        "spatie/packagist-api": "^1.2"
     },
     "config": {
         "optimize-autoloader": true,
@@ -42,6 +46,16 @@
         "post-create-project-cmd": [
             "@php artisan key:generate --ansi"
         ],
-        "deploy": "php artisan export --env=prod"
+        "load": [
+            "php artisan load:packagist",
+            "php artisan load:github"
+        ],
+        "deploy": [
+            "@load",
+            "php artisan export --env=prod"
+        ]
+    },
+    "require-dev": {
+        "facade/ignition": "^1.11"
     }
 }
