change default base url

--- a/netlify.toml
+++ b/netlify.toml
@@ -32,7 +32,7 @@
     Cache-Control = "public, s-max-age=31536000"
 
 [[redirects]]
-  from = "https://amazing-darwin-2f1581.netlify.com/*"
+  from = "https://astrotomic.netlify.com/*"
   to = "https://astrotomic.info/:splat"
   status = 301
   force = true
