--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,15 +12,18 @@ jobs:
       - uses: actions/checkout@v1
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
-      - name: Install Dependencies
+      - name: Install Composer Dependencies
+        run: composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+      - name: Install Yarn Dependencies
         run: |
-          composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
           npm config set "@fortawesome:registry" https://npm.fontawesome.com/
           npm config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_TOKEN }}
           yarn install
       - name: Generate key
         run: php artisan key:generate
+      - name: Mix assets
+        run: yarn production
       - name: Export page
-        run: php artisan export --env=prod --skip-deploy
+        run: php artisan export --env=prod --skip-assets --skip-deploy
       - name: list files
         run: ls -laF ./dist/
