--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,6 +30,7 @@ jobs:
           php artisan load:github
       - name: Export page
         run: php artisan export --env=prod --skip-assets --skip-deploy
+# ToDo: https://github.com/spatie/laravel-export/pull/31
 #      - name: Netlify deploy
 #        uses: netlify/actions/cli@master
 #        with:
