--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
         "laravel/framework": "^6.0",
         "php-http/guzzle6-adapter": "^1.1",
         "spatie/laravel-blade-x": "^2.4",
-        "spatie/packagist-api": "^1.2"
+        "spatie/packagist-api": "^1.2",
+        "spatie/schema-org": "^2.9"
     },
     "config": {
         "optimize-autoloader": true,
