--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "resolve-url-loader": "^3.1.0",
     "sass": "^1.22.12",
     "sass-loader": "^7.3.1",
+    "svgo": "^1.3.2",
+    "svgo-loader": "^2.2.1",
     "webpack": "^4.0.0"
   },
   "dependencies": {
