--- a/netlify.toml
+++ b/netlify.toml
@@ -14,22 +14,22 @@
 [[headers]]
   for = "/css/*"
   [headers.values]
-    Cache-Control = "public, s-max-age=31536000"
+    Cache-Control = "public, max-age=31536000"
 
 [[headers]]
   for = "/fonts/*"
   [headers.values]
-    Cache-Control = "public, s-max-age=31536000"
+    Cache-Control = "public, max-age=31536000"
 
 [[headers]]
   for = "/images/*"
   [headers.values]
-    Cache-Control = "public, s-max-age=31536000"
+    Cache-Control = "public, max-age=31536000"
 
 [[headers]]
   for = "/js/*"
   [headers.values]
-    Cache-Control = "public, s-max-age=31536000"
+    Cache-Control = "public, max-age=31536000"
 
 [[redirects]]
   from = "https://astrotomic.netlify.com/*"
