--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -12,32 +12,60 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Git checkout
-        uses: actions/checkout@v1
-        with:
-          ref: master
+        uses: actions/checkout@v2
+
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
+
+      - name: Get Composer Cache Directory
+        id: composer-cache
+        run: echo "::set-output name=dir::$(composer config cache-dir)"
+      - name: Cache Composer
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.composer-cache.outputs.dir }}
+          key: composer-${{ hashFiles('composer.json') }}
+          restore-keys: |
+            composer-
+
       - name: Install Composer Dependencies
         run: composer install --no-ansi --no-interaction --no-scripts --no-suggest --no-progress --prefer-dist
+
+      - name: Get Yarn Cache Directory
+        id: yarn-cache
+        run: echo "::set-output name=dir::$(yarn cache dir)"
+      - name: Cache Yarn
+        uses: actions/cache@v1
+        with:
+          path: ${{ steps.yarn-cache.outputs.dir }}
+          key: yarn-${{ hashFiles('package.json') }}
+          restore-keys: |
+            yarn-
+
       - name: Install Yarn Dependencies
         run: |
           npm config set "@fortawesome:registry" https://npm.fontawesome.com/
           npm config set "//npm.fontawesome.com/:_authToken" ${{ secrets.FONTAWESOME_TOKEN }}
           yarn install
+
       - name: Mix assets
         run: yarn production
+
       - name: Generate key
         run: php artisan key:generate
+
       - name: Load dynamic data
         run: |
           php artisan load:packagist
           php artisan load:github
+
       - name: Export page
         run: php artisan export --env=prod --skip-assets --skip-deploy
+
       - name: Netlify deploy
-        uses: netlify/actions/cli@master
-        with:
-          args: deploy --prod
+        run: |
+          yarn global add netlify-cli
+          "$(yarn global bin)/netlify" deploy --prod
         env:
           NETLIFY_AUTH_TOKEN: ${{ secrets.NETLIFY_AUTH_TOKEN }}
           NETLIFY_SITE_ID: ${{ secrets.NETLIFY_SITE_ID }}
