add composer homepage

--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
         "astrotomic",
         "stancy"
     ],
+    "homepage": "https://astrotomic.info",
     "license": "MIT",
     "authors": [
         {
