--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
     "require": {
         "php": "^7.4",
         "ext-json": "*",
+        "astrotomic/laravel-mime": "^0.2.0",
+        "astrotomic/laravel-weserv-images": "^0.2.1",
         "astrotomic/stancy": "^0.5.0",
         "fideloper/proxy": "^4.0",
         "knplabs/github-api": "^2.11",
