--- a/.github/workflows/composer-thanks.yml
+++ b/.github/workflows/composer-thanks.yml
@@ -14,3 +14,5 @@ jobs:
         run: |
           composer global require symfony/thanks
           composer thanks
+        env:
+          COMPOSER_AUTH: ${{ secrets.COMPOSER_AUTH }}
