--- a/composer.json
+++ b/composer.json
@@ -20,6 +20,7 @@
         "php": "^7.4",
         "ext-json": "*",
         "astrotomic/laravel-weserv-images": "^0.4.1",
+        "astrotomic/php-open-graph": "^0.2.2",
         "astrotomic/stancy": "^0.5.0",
         "fideloper/proxy": "^4.0",
         "knplabs/github-api": "^2.11",
