--- a/netlify.toml
+++ b/netlify.toml
@@ -8,7 +8,7 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "no-referrer-when-downgrade"
-    Content-Security-Policy = "default-src 'self';base-uri 'self';connect-src 'none';form-action 'none';frame-src 'none';frame-ancestors 'none';child-src 'none';font-src 'self';img-src 'self' https://images.weserv.nl https://toolkit.offset.earth https://img.shields.io;media-src 'none';object-src 'none';script-src 'self';style-src 'self' 'unsafe-inline'"
+    Content-Security-Policy = "default-src 'self';base-uri 'self';connect-src 'none';form-action 'none';frame-src 'none';frame-ancestors 'none';child-src 'none';font-src 'self';img-src 'self' https://img.astrotomic.info https://toolkit.offset.earth https://img.shields.io;media-src 'none';object-src 'none';script-src 'self';style-src 'self' 'unsafe-inline'"
 
 [[headers]]
   for = "/css/*"
