--- a/netlify.toml
+++ b/netlify.toml
@@ -8,27 +8,35 @@
     X-XSS-Protection = "1; mode=block"
     X-Content-Type-Options = "nosniff"
     Referrer-Policy = "no-referrer-when-downgrade"
-    Content-Security-Policy = "default-src 'self';base-uri 'self';connect-src 'none';form-action 'none';frame-src 'none';frame-ancestors 'none';child-src 'none';font-src 'self';img-src 'self' https://img.astrotomic.info https://toolkit.offset.earth https://img.shields.io;media-src 'none';object-src 'none';script-src 'self';style-src 'self' 'unsafe-inline'"
+    Content-Security-Policy = "default-src 'self';base-uri 'self';connect-src 'none';form-action 'none';frame-src 'none';frame-ancestors 'none';child-src 'none';font-src 'self';img-src 'self' https://img.astrotomic.info https://toolkit.offset.earth https://img.shields.io;media-src 'none';object-src 'none';script-src 'self' https://cdn.astrotomic.info;style-src 'self' 'unsafe-inline' https://cdn.astrotomic.info"
 
 [[headers]]
   for = "/css/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, HEAD, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
 
 [[headers]]
   for = "/fonts/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, HEAD, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
 
 [[headers]]
   for = "/images/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, HEAD, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
 
 [[headers]]
   for = "/js/*"
   [headers.values]
-    Cache-Control = "public, max-age=31536000"
+    Access-Control-Allow-Origin = "*"
+    Access-Control-Allow-Methods = "GET, HEAD, OPTIONS"
+    Access-Control-Allow-Headers = "Content-Type"
 
 [[redirects]]
   from = "https://astrotomic.netlify.com/*"
