--- a/.env.prod
+++ b/.env.prod
@@ -1,5 +1,6 @@
 APP_ENV=prod
-APP_URL=https://astrotomic.info
 APP_DEBUG=false
+APP_URL=https://astrotomic.info
+ASSET_URL="https://cdn.astrotomic.info"
 
 IMGIX_DOMAIN="img.astrotomic.info"
