add Cloudflare web analytics

--- a/netlify.toml
+++ b/netlify.toml
@@ -11,7 +11,7 @@
     Content-Security-Policy = '''
         default-src 'self';
         base-uri 'self';
-        connect-src 'none';
+        connect-src https://cloudflareinsights.com;
         form-action 'none';
         frame-src 'none';
         frame-ancestors 'none';
@@ -20,7 +20,7 @@
         img-src 'self' https://img.astrotomic.info https://cdn.astrotomic.info https://toolkit.offset.earth https://img.shields.io;
         media-src 'none';
         object-src 'none';
-        script-src 'self' https://cdn.astrotomic.info;
+        script-src 'self' https://cdn.astrotomic.info https://static.cloudflareinsights.com;
         style-src 'self' 'unsafe-inline' https://cdn.astrotomic.info
     '''
 
