apply new tailwind astrotomic plugin

--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.11.2",
+    "tailwind-astrotomic-colors": "astrotomic/tailwind-astrotomic-colors",
     "tailwindcss": "^1.1.2",
     "typeface-inter": "^3.10.0"
   }
