add sponsors section

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -63,8 +63,10 @@ jobs:
         run: |
           php artisan load:packagist
           php artisan load:github
+          php artisan load:sponsors
         env:
           GH_PAT: ${{ secrets.GITHUB_TOKEN }}
+          GH_SPONSOR_PATS: ${{ secrets.GH_SPONSOR_PATS }}
 
       - name: Export page
         run: php artisan export --env=prod --skip-all
