--- a/package.json
+++ b/package.json
@@ -22,7 +22,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-pro": "^5.11.2",
-    "tailwind-astrotomic-colors": "astrotomic/tailwind-astrotomic-colors",
+    "tailwind-astrotomic-colors": "astrotomic/tailwind-astrotomic-colors#main",
     "tailwindcss": "^1.1.2",
     "typeface-inter": "^3.10.0"
   }
