--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -19,6 +19,10 @@ jobs:
           extensions: dom, curl, libxml, mbstring, zip, imagick
           tools: composer:v2
 
+      - uses: actions/setup-node@v2
+        with:
+          node-version: '15'
+
       - name: Copy .env
         run: php -r "file_exists('.env') || copy('.env.example', '.env');"
 
