--- a/composer.json
+++ b/composer.json
@@ -21,15 +21,14 @@
         "ext-json": "*",
         "astrotomic/laravel-imgix": "^0.1.1",
         "astrotomic/php-open-graph": "^0.4.0",
-        "astrotomic/stancy": "^0.5.0",
         "fideloper/proxy": "^4.0",
         "knplabs/github-api": "^2.11",
-        "laravel/framework": "^6.0",
+        "laravel/framework": "^7.0",
         "php-http/guzzle6-adapter": "^1.1",
-        "spatie/laravel-blade-x": "^2.4",
         "spatie/laravel-export": "0.3.3 as 0.2.3",
         "spatie/packagist-api": "^1.2",
-        "spatie/schema-org": "^2.9"
+        "spatie/schema-org": "^2.9",
+        "spatie/sheets": "^1.4"
     },
     "require-dev": {
         "facade/ignition": "^1.11"
