--- a/composer.json
+++ b/composer.json
@@ -25,7 +25,7 @@
         "knplabs/github-api": "^2.11",
         "laravel/framework": "^7.0",
         "php-http/guzzle6-adapter": "^1.1",
-        "spatie/laravel-export": "0.3.3 as 0.2.3",
+        "spatie/laravel-export": "^0.3",
         "spatie/packagist-api": "^2.0",
         "spatie/schema-org": "^3.4",
         "spatie/sheets": "^1.7"
