--- a/composer.json
+++ b/composer.json
@@ -19,12 +19,13 @@
     "require": {
         "php": "^7.4",
         "ext-json": "*",
-        "astrotomic/laravel-imgix": "^0.1.1",
-        "astrotomic/php-open-graph": "^0.4.0",
+        "astrotomic/laravel-imgix": "^0.2",
+        "astrotomic/php-open-graph": "^0.5",
         "fideloper/proxy": "^4.0",
-        "knplabs/github-api": "^2.11",
+        "guzzlehttp/guzzle": "^7.0",
+        "http-interop/http-factory-guzzle": "^1.0",
+        "knplabs/github-api": "^3.3",
         "laravel/framework": "^7.0",
-        "php-http/guzzle6-adapter": "^1.1",
         "spatie/laravel-export": "^0.3",
         "spatie/packagist-api": "^2.0",
         "spatie/schema-org": "^3.4",
