--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,13 @@ APP_URL=http://127.0.0.1:8000
 ASSET_URL=http://127.0.0.1:8000
 
 LOG_CHANNEL=stack
+LOG_LEVEL=debug
 
 DB_CONNECTION=sqlite
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
+FILESYSTEM_DRIVER=local
 QUEUE_CONNECTION=sync
 SESSION_DRIVER=file
 SESSION_LIFETIME=120
