--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,25 @@
-/vendor/
-/node_modules/
-/.env
-/public/mix-manifest.json
-/public/css/
-/.npmrc
-/public/fonts/
-/dist/
-/public/images/
-/public/favicon.ico
-/.netlify/
-/public/js/
+/.netlify
+/.idea
+/.vscode
+/dist
+/node_modules
+/public/css
+/public/fonts
+/public/hot
+/public/images
+/public/js
+/public/storage
+/storage/*.key
+/vendor
 *.log
+.env
+.env.backup
+.npmrc
+.phpunit.result.cache
+docker-compose.override.yml
+Homestead.json
+Homestead.yaml
+npm-debug.log
+yarn-error.log
+/public/favicon.ico
+/public/mix-manifest.json
