--- a/package.json
+++ b/package.json
@@ -21,9 +21,10 @@
     "webpack": "^4.0.0"
   },
   "dependencies": {
-    "@fortawesome/fontawesome-pro": "^5.11.2",
+    "autoprefixer": "^10.3.4",
+    "postcss": "^8.3.6",
     "tailwind-astrotomic-colors": "astrotomic/tailwind-astrotomic-colors#main",
-    "tailwindcss": "^1.1.2",
+    "tailwindcss": "^2.2.15",
     "typeface-inter": "^3.10.0"
   }
 }
