--- a/.github/workflows/pest.yml
+++ b/.github/workflows/pest.yml
@@ -5,20 +5,13 @@ on:
 
 jobs:
   pest:
-    name: P${{ matrix.php }} - ${{ matrix.dependency-version }}
     timeout-minutes: 15
     runs-on: ubuntu-latest
-    strategy:
-      fail-fast: false
-      matrix:
-        php: [8.1]
-        dependency-version: [prefer-lowest, prefer-stable]
 
     steps:
       - uses: actions/checkout@v3.1.0
       - uses: shivammathur/setup-php@v2
         with:
-          php-version: ${{ matrix.php }}
-      - name: Install dependencies
-        run: composer update --${{ matrix.dependency-version }} --prefer-dist --no-interaction --no-suggest
+          php-version: 8.1
+      - run: composer update --prefer-dist --no-interaction --no-suggest --no-scripts
       - run: vendor/bin/pest
