--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,7 +60,10 @@ jobs:
         run: yarn build
 
       - name: Export page
-        run: php artisan export --env=prod --skip-all
+        run: |
+          php artisan blade-fontawesome:sync-icons
+          php artisan icons:cache
+          php artisan export --env=prod --skip-all
         env:
           GITHUB_ACCESS_TOKEN: ${{ secrets.GH_ACCESS_TOKEN }}
           IMGIX_SIGN_KEY: ${{ secrets.IMGIX_SIGN_KEY }}
