--- a/composer.json
+++ b/composer.json
@@ -14,29 +14,26 @@
     ],
     "homepage": "https://astrotomic.info",
     "require": {
-        "php": "^8.1",
+        "php": "~8.2.0",
         "ext-json": "*",
-        "astrotomic/ecologi-sdk": "^0.1.0",
-        "astrotomic/laravel-github-sponsors": "^0.4.0",
-        "astrotomic/laravel-imgix": "^1.0",
-        "calebporzio/sushi": "^2.4",
-        "composer/semver": "^3.3",
-        "guzzlehttp/guzzle": "^7.2",
-        "knplabs/github-api": "^3.9",
-        "laravel/framework": "^9.19",
-        "owenvoke/blade-fontawesome": "^2.0",
-        "spatie/laravel-export": "^0.3.10",
+        "astrotomic/ecologi-sdk": "^0.2.0",
+        "astrotomic/laravel-github-sponsors": "^1.0",
+        "astrotomic/laravel-imgix": "^1.1",
+        "calebporzio/sushi": "^2.5.1",
+        "composer/semver": "^3.4",
+        "guzzlehttp/guzzle": "^7.8.1",
+        "knplabs/github-api": "^3.13",
+        "laravel/framework": "^10.43",
+        "owenvoke/blade-fontawesome": "^2.5.1",
         "spatie/packagist-api": "^2.1"
     },
     "require-dev": {
-        "barryvdh/laravel-ide-helper": "^2.12",
-        "fakerphp/faker": "^1.9.1",
-        "laravel/pint": "^1.2",
-        "mockery/mockery": "^1.4.4",
-        "nunomaduro/collision": "^6.1",
-        "pestphp/pest": "^1.22",
-        "pestphp/pest-plugin-laravel": "^1.3",
-        "spatie/laravel-ignition": "^1.0"
+        "barryvdh/laravel-ide-helper": "^2.14",
+        "laravel/pint": "^1.13.10",
+        "nunomaduro/collision": "^7.10",
+        "pestphp/pest": "^2.33.4",
+        "pestphp/pest-plugin-laravel": "^2.2",
+        "spatie/laravel-ignition": "^2.4.1"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
