--- a/composer.json
+++ b/composer.json
@@ -36,7 +36,8 @@
         "nunomaduro/collision": "^6.1",
         "pestphp/pest": "^1.22",
         "pestphp/pest-plugin-laravel": "^1.3",
-        "spatie/laravel-ignition": "^1.0"
+        "spatie/laravel-ignition": "^1.0",
+        "spatie/laravel-ray": "^1.37"
     },
     "minimum-stability": "dev",
     "prefer-stable": true,
